/*
 * Copyright 2018- The Pixie Authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

// Test proto for use in the Status proto tests.

syntax = "proto3";

package px.testpb;

option go_package = "testpb";

message TestChildMessage {
  string string_val = 1;
}

// This is the proto representation.
message TestParentMessage {
  int64 int_val = 1;
  repeated TestChildMessage child = 2;
}
